--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -30,6 +30,15 @@
   display: flex;
   flex-direction: column;
 }
+.row__posters-1 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 86vh;
+  padding-bottom: 50px;
+}
 .col-2-row-1-2nd-header {
   background-color: rgb(32, 44, 51);
   height: 60px;
@@ -147,10 +156,14 @@
   padding-bottom: 110px;
   padding-top: 400px;
 }
+
 .col-2-row-2-msg-dis-player::-webkit-scrollbar {
   display: none;
 }
 .row__posters::-webkit-scrollbar {
+  display: none;
+}
+.row__posters-1::-webkit-scrollbar {
   display: none;
 }
 .my-messages-text {
