--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -88,6 +88,18 @@
   background-color: rgb(41, 52, 58);
   cursor: pointer;
 }
+
+.users-btn-divSel {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  align-content: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: rgb(41, 52, 58);
+  cursor: pointer;
+}
 .row-form-data-for-search {
   background-color: rgb(17, 27, 33);
   border-right: 0.2px solid grey;
